--- a/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
@@ -6,5 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using Web
 @using Web.Shared
+@using Web.Repositories;
+
+@using Share.Entities;
