--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
@@ -1,18 +1,19 @@
 ﻿@page "/countries"
-
 @inject IRepository repository
+@inject SweetAlertService sweetAlertService
+@inject NavigationManager navigationManager
 
 <h3>Países</h3>
+
+ <a class="btn btn-primary" href="/countries/create">New Country</a>
+
 <GenericList MyList="Countries">
-    <Loading>
-        Loading...
-    </Loading>
     <Body>  
     <table class="table table-striped">
         <thead>
             <tr>
                 <th></th>
-                <th>País</th>
+                <th>Country</th>
             </tr>
         </thead>
         <tbody>
@@ -20,8 +21,8 @@
             {
                 <tr>
                     <td>
-                        <a class="btn btn-warning">Edit</a>
-                        <button class="btn btn-danger">Remove</button>
+                        <a class="btn btn-warning" href="/countries/edit/@country.Id">Edit</a>
+                        <button class="btn btn-danger" @onclick="(() => DeleteAsync(country.Id))">Remove</button>
                     </td>
                     <td>
                         @country.Name
@@ -38,8 +39,37 @@
 
     protected override  async Task OnInitializedAsync()
     {
+        await LoadAsync();
+    }
+
+    private async Task LoadAsync()
+    {
         var responseHttp = await repository.Post<List<Country>>("/api/countries/retrieve");
-        Countries = responseHttp.Response;
+        Countries = responseHttp.Response; 
+    }
+
+    private async Task DeleteAsync(int id)
+    {        
+        SweetAlertResult result = await sweetAlertService.FireAsync(new SweetAlertOptions()
+                {
+                    Title = "Confirmation",
+                    Text = "Do you want to abandon this page, you will lost all content!",
+                    Icon = SweetAlertIcon.Question,
+                    ShowCancelButton = true,
+                    CancelButtonText = "No",
+                    ConfirmButtonText = "Yes"
+                });
+
+        if (string.IsNullOrEmpty(result.Value)) return;
+
+        var responseHttp = await repository.Delete($"/api/countries/delete/{id}");
+        if(responseHttp.Error && responseHttp.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
+        {
+            await sweetAlertService.FireAsync("Error", await responseHttp.GetErrorMessage(), SweetAlertIcon.Error);
+            return;
+        }
+
+        await LoadAsync();
     }
 }
 
