--- a/NetMAUI/MauiPlusBlazor/Web/Shared/NavMenu.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Shared/NavMenu.razor
@@ -21,7 +21,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="countries">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Países
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Countries
+            </NavLink>
+        </div>
+           <div class="nav-item px-3">
+            <NavLink class="nav-link" href="categories">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
             </NavLink>
         </div>
     </nav>
