--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Index.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Hani's CRUD System</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Need to betterize:</h1>
 
-Welcome to your new app.
+- Access to data in DB, is taking too much time
+- Reduce the number o pages. The design is the same, only the content change, try do pages for design and pages or elements for control
 
-<SurveyPrompt Title="How is Blazor working for you?" />
