--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
@@ -49,9 +49,6 @@ else
 }
 }
 
-
-
-
 @code {
     public List<City>? Cities { get; set; }
     private State? State{ get; set; }
@@ -76,7 +73,7 @@ else
         try
         {
             var responseHttp = await repository.Post<List<City>>($"{prefix}retrieve");
-            Cities = responseHttp.Response!.Where(x => x.StateId == StateId).ToList();         
+            Cities = responseHttp.Response!.Where(x => x.StateId == StateId).OrderBy(p => p.Name).ToList();         
         }
         catch(Exception ex)
         {
