--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
@@ -1,11 +1,24 @@
 ﻿@page "/countries"
 @inject IRepository repository
-@inject SweetAlertService sweetAlertService
-@inject NavigationManager navigationManager
+@inject SweetAlertService alert
 
 <h3>Countries</h3>
 
- <a class="btn btn-primary" href="/countries/create">New Country</a>
+<div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+    <div>
+        <a class="btn btn-primary" href="/countries/create">New Country</a>
+    </div>
+    <div class="mx-2">
+        <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Search country..." @bind-value="Filter" />
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Apply Filter</button>
+        <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Clean Filter</button>
+    </div>
+</div>
+
+
+<Pagination CurrentPage="currentPage" TotalPages="totalPages" SelectedPage="SelectedPage" /> 
 
 <GenericList MyList="Countries">
     <Body>  
@@ -41,41 +54,89 @@
 
 @code {
     public List<Country>? Countries { get; set; }
+    private int currentPage = 1;
+    private int totalPages;
+
     private const string countries = "/countries";
     private const string prefix = $"/api{countries}/";
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = "";
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = "";
+
 
     protected override  async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task LoadAsync(int page = 1)
     {
-        var responseHttp = await repository.Post<List<Country>>($"{prefix}retrieve");
-        Countries = responseHttp.Response!.OrderBy(p => p.Name).ToList(); 
+        if (!string.IsNullOrWhiteSpace(Page))page = Convert.ToInt32(Page);        
+
+        string url1 = $"{prefix}retrieve?page={page}";
+        string url2 = $"{prefix}totalPages";
+
+        if (!string.IsNullOrEmpty(Filter))
+        {
+            url1 = $"{url1}&filter={Filter}";
+            url2 = $"{url2}?filter={Filter}";
+        }
+
+        var responseHttp = await repository.Post<List<Country>>(url1);
+        if (responseHttp.Error) 
+        {
+            await alert.FireAsync("Error", await responseHttp.GetErrorMessage(), SweetAlertIcon.Error);
+            return;
+        }
+        Countries = responseHttp.Response!.OrderBy(p => p.Name).ToList();
+
+        var responseHttp2 = await repository.Post<int>(url2);
+        if (responseHttp2.Error) 
+        {
+            await alert.FireAsync("Error", await responseHttp2.GetErrorMessage(), SweetAlertIcon.Error);
+            return;
+        } 
+        totalPages = responseHttp2.Response!;
     }
 
     private async Task DeleteAsync(int id)
-    {        
-        SweetAlertResult result = await sweetAlertService.FireAsync(new SweetAlertOptions()
-                {
-                    Title = "Confirmation",
-                    Text = "Do you want to abandon this page, you will lost all content!",
-                    Icon = SweetAlertIcon.Question,
-                    ShowCancelButton = true,
-                    CancelButtonText = "No",
-                    ConfirmButtonText = "Yes"
-                });
+    {
+        var result = await alert.Ask("Question", $"Do you want to delete this {nameof(Country)}: {Countries!.Where(p => p.Id == id).FirstOrDefault()!.Name}?");
+        if (!result) return;
 
-        if (string.IsNullOrEmpty(result.Value)) return;
-
-        var responseHttp = await repository.Delete($"{prefix}delete/{id}");
-        if(responseHttp.Error && responseHttp.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
+        HttpResponseWrapper<object> responseHttp = await repository.Delete($"{prefix}delete/{id}");        
+        if (responseHttp.Error) 
         {
-            await sweetAlertService.FireAsync("Error", await responseHttp.GetErrorMessage(), SweetAlertIcon.Error);
+            await alert.FireAsync("Error", await responseHttp.GetErrorMessage(), SweetAlertIcon.Error);
             return;
-        }
+        }     
 
         await LoadAsync();
     }
+
+    private async Task SelectedPage(int page)
+    {
+        if (page == totalPages + 1) return;
+        currentPage = page;
+        await LoadAsync(page);
+    }      
+
+    private async Task CleanFilterAsync()
+    {
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPage(page);
+    }
+
 }
