--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
@@ -55,7 +55,7 @@
 @code {
     public List<Country>? Countries { get; set; }
     private int currentPage = 1;
-    private int totalPages;
+    private int totalPages = 0;
 
     private const string countries = "/countries";
     private const string prefix = $"/api{countries}/";
@@ -95,13 +95,16 @@
         }
         Countries = responseHttp.Response!.OrderBy(p => p.Name).ToList();
 
-        var responseHttp2 = await repository.Post<int>(url2);
-        if (responseHttp2.Error) 
+        if (totalPages == 0)
         {
-            await alert.FireAsync("Error", await responseHttp2.GetErrorMessage(), SweetAlertIcon.Error);
-            return;
-        } 
-        totalPages = responseHttp2.Response!;
+            var responseHttp2 = await repository.Post<int>(url2);
+            if (responseHttp2.Error)
+            {
+                await alert.FireAsync("Error", await responseHttp2.GetErrorMessage(), SweetAlertIcon.Error);
+                return;
+            }
+            totalPages = responseHttp2.Response!;
+        }
     }
 
     private async Task DeleteAsync(int id)
@@ -121,7 +124,6 @@
 
     private async Task SelectedPage(int page)
     {
-        if (page == totalPages + 1) return;
         currentPage = page;
         await LoadAsync(page);
     }      
