User table created

--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
@@ -21,7 +21,7 @@ else
           <a class="btn btn-success" href="/states/@State!.CountryId">Return</a>
     </div>
         <div class="mx-2">
-            <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar ciudad..." @bind-value="Filter" />
+            <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Search city..." @bind-value="Filter" />
         </div>
         <div>
             <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Filtrar</button>
