Primeira etapa de segurança

--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Cities/CitiesIndex.razor
@@ -2,6 +2,7 @@
 @inject IRepository repository
 @inject SweetAlertService alert
 @inject NavigationManager navigationManager
+@attribute [Authorize(Roles = "Admin")]
 
 @if(State is null)
 {
