--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
@@ -1,6 +1,7 @@
 ﻿@page "/countries"
 @inject IRepository repository
 @inject SweetAlertService alert
+@attribute [Authorize(Roles = "Admin")]
 
 <h3>Countries</h3>
 
