--- a/NetMAUI/MauiPlusBlazor/Web/Pages/States/StatesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/States/StatesIndex.razor
@@ -1,6 +1,7 @@
 ﻿@page "/states/{CountryId:int}"
 @inject IRepository repository
 @inject SweetAlertService alert
+@attribute [Authorize(Roles = "Admin")]
 
 @if (country is null)
 {
