--- a/NetMAUI/MauiPlusBlazor/Web/Shared/NavMenu.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Shared/NavMenu.razor
@@ -14,16 +14,25 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+         <AuthorizeView Roles="Admin">
+            <Authorized>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="countries">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Countries
-            </NavLink>
-        </div>
-           <div class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
             </NavLink>
         </div>
+          </Authorized>
+        </AuthorizeView>
+            <AuthorizeView Roles="Admin">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="countries">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Countries
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
     </nav>
 </div>
 
