--- a/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
@@ -6,8 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization;
 @using Microsoft.JSInterop
-
 @using Web
 @using Web.Shared
 @using Web.Repositories;
