--- a/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
@@ -10,9 +10,11 @@
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.JSInterop
 @using Web
+@using Web.Auth;
 @using Web.Shared
 @using Web.Repositories;
 
 @using Share.Entities;
+@using Share.DTOs;
 
 @using CurrieTechnologies.Razor.SweetAlert2;
