--- a/NetMAUI/MauiPlusBlazor/Web/Shared/GenericList.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Shared/GenericList.razor
@@ -4,9 +4,7 @@
 {
     @if(Loading is null)
     {
-        <div class="align-items-center">
-            <img src="https://cdnl.iconscout.com/lottie/premium/thumb/loading-dots-5711313-4752313.gif">
-        </div>
+        <div class="spinner" />
     }
     else { @Loading }
 }else if (MyList.Count == 0)
