--- a/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/_Imports.razor
@@ -15,6 +15,6 @@
 @using Web.Repositories;
 
 @using Share.Entities;
-@using Share.DTOs;
+@using Share.DTO;
 
 @using CurrieTechnologies.Razor.SweetAlert2;
