--- a/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Pages/Countries/CountriesIndex.razor
@@ -3,56 +3,67 @@
 @inject SweetAlertService alert
 @attribute [Authorize(Roles = "Admin")]
 
-<h3>Countries</h3>
+@if (Countries is null)
+{
+    <div class="spinner"/>
+}
+else
+{
+    <GenericList MyList="Countries">
+        <Body>
+            <div class="card">
+                <div class="card-header">
+                    <span>
+                        <i class="oi oi-globe"></i> Countries 
+                        <a class="btn btn-sm btn-primary float-end" href="/countries/create"><i class="oi oi-plus"></i> Add Country</a>
+                    </span>
+                </div>
+                <div class="card-body">
+                    <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+                        <div>
+                            <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Search Country..." @bind-value="Filter" />
+                        </div>
+                        <div class="mx-1">
+                            <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filter</button>
+                            <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync"><i class="oi oi-ban" /> Clean</button>
+                        </div>
+                    </div>
 
-<div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
-    <div>
-        <a class="btn btn-primary" href="/countries/create">New Country</a>
-    </div>
-    <div class="mx-2">
-        <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Search country..." @bind-value="Filter" />
-    </div>
-    <div>
-        <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Apply Filter</button>
-        <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Clean Filter</button>
-    </div>
-</div>
+                    <Pagination CurrentPage="currentPage" TotalPages="totalPages" SelectedPage="SelectedPage" />
 
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>País</th>
+                                <th style="width:220px">Departamentos / Estados</th>
+                                <th style="width:310px"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var country in Countries!)
+                            {
+                                <tr>
+                                    <td>
+                                        @country.Name
+                                    </td>
+                                    <td>
+                                        @country.StatesNumber
+                                    </td>
+                                    <td>
+                                        <a href="/states/@country.Id" class="btn btn-info btn-sm"><i class="oi oi-list" /> View States</a>
+                                        <a href="/countries/edit/@country.Id" class="btn btn-warning btn-sm"><i class="oi oi-pencil" /> Edit</a>
+                                        <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(country.Id))><i class="oi oi-trash" /> Delete</button>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </Body>
+    </GenericList>
 
-<Pagination CurrentPage="currentPage" TotalPages="totalPages" SelectedPage="SelectedPage" /> 
-
-<GenericList MyList="Countries">
-    <Body>  
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Countries</th>
-                <th>States</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var country in Countries!)
-            {
-                <tr>
-                    <td>
-                        @country.Name
-                    </td>
-                    <td>
-                        @country.StatesNumber
-                    </td>
-                    <td>
-                        <a class="btn btn-info" href="/states/@country.Id">View States</a>
-                        <a class="btn btn-warning" href="/countries/edit/@country.Id">Edit</a>
-                        <button class="btn btn-danger" @onclick="(() => DeleteAsync(country.Id))">Remove</button>
-                    </td>
-                </tr>   
-            }
-        </tbody>
-    </table>
-    </Body>
-</GenericList>
-
+}
 @code {
     public List<Country>? Countries { get; set; }
     private int currentPage = 1;
