--- a/NetMAUI/MauiPlusBlazor/Web/Shared/AuthLinks.razor
+++ b/NetMAUI/MauiPlusBlazor/Web/Shared/AuthLinks.razor
@@ -1,6 +1,12 @@
 ﻿<AuthorizeView>
     <Authorized>
-        <span>Hola, @context.User.Identity!.Name</span>
+        Welcome <a href="EditUser" class="nav-link btn btn-link">@context.User.Identity!.Name</a>
+            @if (!string.IsNullOrEmpty(photoUser))
+            {
+                <div class="mx-2">
+                    <img src="@photoUser" width="50" height="50" style="border-radius:50%" />
+                </div>
+            }
         <a href="Logout" class="nav-link btn btn-link">Logout</a>
     </Authorized>
     <NotAuthorized>
@@ -10,5 +16,20 @@
 </AuthorizeView>
 
 @code {
+    private string? photoUser;
+
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; } = null!;
+
+    protected async override Task OnParametersSetAsync()
+    {
+        var authenticationState = await authenticationStateTask;
+        var claims = authenticationState.User.Claims.ToList();
+        var photoClaim = claims.FirstOrDefault(x => x.Type == "Photo");
+        if (photoClaim is not null)
+        {
+            photoUser = photoClaim.Value;
+        }
+    }
 
 }
